// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render a confirmation alert with an icon 1`] = `
<div
  className="css-1bmpwsg0 css-1q5hagj"
  role="alert"
  style={Object {}}
  type="confirmation"
>
  <i
    className="css-fj83eq0 css-bwiye3"
    color="green"
    onClick={undefined}
    size={16}
    style={Object {}}
    title={undefined}
  >
    <svg
      aria-hidden="true"
      height={16}
      width={16}
    >
      <title>
        check_circle
      </title>
      <use
        xlinkHref="#check_circle"
      />
    </svg>
  </i>
  <span
    className="css-16ef8bd0 css-1oduhpk"
    color="green"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A confirmation alert
  </span>
</div>
`;

exports[`Alert should render a warning alert 1`] = `
<div
  className="css-1bmpwsg0 css-1lxa1de"
  role="alert"
  style={Object {}}
  type="warning"
>
  <span
    className="css-16ef8bd0 css-i4nqd3"
    color="orange"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A warning alert
  </span>
</div>
`;

exports[`Alert should render shallow component ok 1`] = `
<div
  className="css-1bmpwsg0 css-h3o9uw"
  role="alert"
  style={Object {}}
  type="info"
>
  <span
    className="css-16ef8bd0 css-1bicsvo"
    color="blue"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A info alert
  </span>
</div>
`;
